# mnist-solver-pro-max

./: README.md  final-frontier.ipynb  model.py  pyproject.toml  script.py  test_model.py
.github/workflows/: model_tests.yml
